--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -9,7 +9,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: blue;
+    --background: #171717;
     --foreground: #ededed;
   }
 }
